protocols/src/tests/snapshots/protocols__frontend__serialize__tests__remap_module.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Wishbone {
  in RST: u1,
  out ACK: u1,
  in ADR: u32,
  in CYC: u1,
  out DAT_I: u32,
  in DAT_O: u32,
  out ERR: u1,
  out RTY: u1,
  in SEL: u4,
  in STB: u1,
  in WE: u1,
  in BTE: u2,
  in CTI: u3,
}

prot reset<self: Wishbone>() {
  self.RST := 1'd1;
  self.CYC := 1'd0;
  self.STB := 1'd0;
  step();
}

#[idle]
prot idle_no_cycle<self: Wishbone>() {
  self.RST := 1'd0;
  self.CYC := 1'd0;
  step();
}

prot idle_continue_cycle<self: Wishbone>() {
  self.RST := 1'd0;
  self.CYC := 1'd1;
  self.STB := 1'd0;
  step();
}

prot write<self: Wishbone>(mask: u4, addr: u32, data: u32) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd0;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.ADR := addr;
  self.SEL := mask;
  self.DAT_O := data;
  while self.ACK == 1'd0 {
    step();
  }
  step();
}

prot read<self: Wishbone>(mask: u4, addr: u32, data: u32) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd0;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.ADR := addr;
  self.SEL := mask;
  self.DAT_O := X;
  while self.ACK == 1'd0 {
    step();
  }
  assert_eq(self.DAT_I, data);
  step();
}

prot write_burst_single<self: Wishbone>(mask: u4, addr: u32, data: u32) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd7;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.ADR := addr;
  self.SEL := mask;
  self.DAT_O := data;
  while self.ACK == 1'd0 {
    step();
  }
  step();
}

prot read_burst_single<self: Wishbone>(mask: u4, addr: u32, data: u32) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd7;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.ADR := addr;
  self.SEL := mask;
  while self.ACK == 1'd0 {
    step();
  }
  assert_eq(self.DAT_I, data);
  step();
}

prot write_burst_const<self: Wishbone>(mask: u4, addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd1;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.ADR := addr;
  self.SEL := mask;
  for d in data {
    self.DAT_O := d;
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    step();
  }
}

prot read_burst_const<self: Wishbone>(mask: u4, addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd1;
  self.BTE := X;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.ADR := addr;
  self.SEL := mask;
  for d in data {
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    assert_eq(self.DAT_I, d);
    step();
  }
}

prot write_burst_increment_linear<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd0;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr + (iter_count::<u30>() ## 2'd0);
    self.DAT_O := d;
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    step();
  }
}

prot read_burst_increment_linear<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd0;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr + (iter_count::<u30>() ## 2'd0);
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    assert_eq(self.DAT_I, d);
    step();
  }
}

prot write_burst_increment_wrap_4<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd1;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:4] ## (start_addr[3:2] + iter_count::<u2>()) ## start_addr[1:0];
    self.DAT_O := d;
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    step();
  }
}

prot read_burst_increment_wrap_4<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd1;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:4] ## (start_addr[3:2] + iter_count::<u2>()) ## start_addr[1:0];
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    assert_eq(self.DAT_I, d);
    step();
  }
}

prot write_burst_increment_wrap_8<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd2;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:5] ## (start_addr[4:2] + iter_count::<u3>()) ## start_addr[1:0];
    self.DAT_O := d;
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    step();
  }
}

prot read_burst_increment_wrap_8<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd2;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:5] ## (start_addr[4:2] + iter_count::<u3>()) ## start_addr[1:0];
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    assert_eq(self.DAT_I, d);
    step();
  }
}

prot write_burst_increment_wrap_16<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd3;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd1;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:6] ## (start_addr[5:2] + iter_count::<u4>()) ## start_addr[1:0];
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    step();
  }
}

prot read_burst_increment_wrap_16<self: Wishbone>(mask: u4, start_addr: u32, data: [u32]++) {
  assert_eq(mask, 4'd15);
  self.RST := 1'd0;
  self.CTI := 3'd2;
  self.BTE := 2'd3;
  self.CYC := 1'd1;
  self.STB := 1'd1;
  self.WE := 1'd0;
  self.SEL := mask;
  for d in data {
    self.ADR := start_addr[31:6] ## (start_addr[5:2] + iter_count::<u4>()) ## start_addr[1:0];
    if is_last() {
      self.CTI := 3'd7;
    } else {
    }
    while self.ACK == 1'd0 {
      step();
    }
    assert_eq(self.DAT_I, d);
    step();
  }
}


module LitexWishbone : Wishbone {
  in clk : clock @posedge,
  in reset : u1 = !(Wishbone.RST),
  in wishbone_adr : u30 = Wishbone.ADR[31:2] with Wishbone.ADR[1:0] == 2'd0,
  out wishbone_dat_r : u32 = Wishbone.DAT_I,
  in wishbone_dat_w : u32 = Wishbone.DAT_O,
  in wishbone_cyc : u1 = Wishbone.CYC,
  in wishbone_stb : u1 = Wishbone.STB,
  out wishbone_ack : u1 = Wishbone.ACK,
  in wishbone_we : u1 = Wishbone.WE,
  in wishbone_sel : u4 = Wishbone.SEL,
  in wishbone_cti : u3 = Wishbone.CTI,
  in wishbone_bte : u2 = Wishbone.BTE,
  out wishbone_err : u1 = Wishbone.ERR,
}
