protocols/src/tests/snapshots/protocols__frontend__serialize__tests__simple_if.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

prot simple_if<dut: Counter>(a: u64, s: u64) {
  dut.a := a;
  step();
  step();
  if dut.s == 64'd3 {
    assert_eq(dut.s, 64'd0);
  } else {
    step();
    step();
    step();
    step();
    step();
  }
  if dut.s == 64'd7 {
    assert_eq(dut.s, s);
  } else {
    assert_eq(dut.s, 64'd0);
  }
}
