protocols/src/tests/snapshots/protocols__frontend__serialize__tests__simple_while.snap
---
source: protocols/src/frontend/serialize.rs
expression: content
---
struct Counter {
  in a: u64,
  out s: u64,
}

fn simple_while<dut: Counter>(a: u64, b: u64, s: u64) {
  dut.a := a;
  while !(dut.s == b) {
    step();
  }
  step();
  step();
  assert_eq(dut.s, s);
}
